--- a/src/CashFlow.Infrastructure/CashFlow.Infrastructure.csproj
+++ b/src/CashFlow.Infrastructure/CashFlow.Infrastructure.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\ClashFlow.Domain\CashFlow.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+  </ItemGroup>
+
 </Project>
