--- a/src/CashFlow.Application/CashFlow.Application.csproj
+++ b/src/CashFlow.Application/CashFlow.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="ClosedXML" Version="0.102.2" />
       <PackageReference Include="FluentValidation" Version="11.9.1" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
@@ -16,6 +17,10 @@
         <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication\CashFlow.Communication.csproj" />
         <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
         <ProjectReference Include="..\ClashFlow.Domain\CashFlow.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="UseCases\Report\Expenses\" />
     </ItemGroup>
 
 </Project>
