--- a/src/CashFlow.Application/CashFlow.Application.csproj
+++ b/src/CashFlow.Application/CashFlow.Application.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication\CashFlow.Communication.csproj" />
+        <ProjectReference Include="..\CashFlow.Communication\CashFlow.Communication.csproj" />
         <ProjectReference Include="..\CashFlow.Exception\CashFlow.Exception.csproj" />
         <ProjectReference Include="..\ClashFlow.Domain\CashFlow.Domain.csproj" />
     </ItemGroup>
