Adição do endpoint para gerar arquivo excel

--- a/src/CashFlow.Exception/CashFlow.Exception.csproj
+++ b/src/CashFlow.Exception/CashFlow.Exception.csproj
@@ -12,6 +12,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>ResourceErrorMessages.resx</DependentUpon>
     </Compile>
+     <Compile Update="ResourceErrorMessages.pt-BR.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>ResourceErrorMessages.pt-BR.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
