--- a/src/ClashFlow.Domain/CashFlow.Domain.csproj
+++ b/src/ClashFlow.Domain/CashFlow.Domain.csproj
@@ -6,4 +6,27 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+<ItemGroup>
+  <Compile Update="Messages/Reports/ResourceReportGenerationMessages.Designer.cs">
+    <DesignTime>True</DesignTime>
+    <AutoGen>True</AutoGen>
+    <DependentUpon>ResourceReportGenerationMessages.resx</DependentUpon>
+  </Compile>
+  <Compile Update="Messages/Reports/ResourceReportGenerationMessages.pt-BR.Designer.cs">
+    <DesignTime>True</DesignTime>
+    <AutoGen>True</AutoGen>
+    <DependentUpon>ResourceReportGenerationMessages.pt-BR.resx</DependentUpon>
+  </Compile>
+</ItemGroup>
+
+<ItemGroup>
+  <EmbeddedResource Update="Messages/Reports/ResourceReportGenerationMessages.pt-BR.resx">
+    <Generator>ResXFileCodeGenerator</Generator>
+  </EmbeddedResource>
+  <EmbeddedResource Update="Messages/Reports/ResourceReportGenerationMessages.resx">
+    <Generator>PublicResXFileCodeGenerator</Generator>
+    <LastGenOutput>ResourceReportGenerationMessages.Designer.cs</LastGenOutput>
+  </EmbeddedResource>
+</ItemGroup>
+
 </Project>
