--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
-        "connectionId": "http-localhost-9000-clashflow",
+        "connectionId": "http-localhost-9000-",
         "projectKey": "CashFlow"
     }
 }
