--- a/src/CashFlow.Api/appsettings.Development.json
+++ b/src/CashFlow.Api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3306;database=CashFlowDb;Uid=root;Pwd=password;"
+  },
+  "Settings": {
+    "Jwt": {
+      "SigninKey": "n}L.ocH-3PNV_*L0y&8Jr8Dd:;lbpYwr",
+      "ExpiresMinutes": 1000
+    }
   }
 }
