--- a/tests/CommonTestUtilities/CommonTestUtilities.csproj
+++ b/tests/CommonTestUtilities/CommonTestUtilities.csproj
@@ -8,10 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.5.1" />
+    <PackageReference Include="Moq" Version="4.20.70" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\CashFlow.Communication\CashFlow.Communication.csproj" />
+    <ProjectReference Include="..\..\src\ClashFlow.Domain\CashFlow.Domain.csproj" />
   </ItemGroup>
 
 </Project>
