[FIX]: Refatoração no nome das pastas

--- a/tests/Validators.Tests/Validators.Tests.csproj
+++ b/tests/Validators.Tests/Validators.Tests.csproj
@@ -24,9 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\CashFlow.Application\CashFlow.Application.csproj" />
-    <ProjectReference Include="..\src\CashFlow.Communication\CashFlow.Communication.csproj" />
-    <ProjectReference Include="..\tests\CommonTestUtilities\CommonTestUtilities.csproj" />
+    <ProjectReference Include="..\..\src\CashFlow.Application\CashFlow.Application.csproj" />
+    <ProjectReference Include="..\..\src\CashFlow.Communication\CashFlow.Communication.csproj" />
+    <ProjectReference Include="..\CommonTestUtilities\CommonTestUtilities.csproj" />
   </ItemGroup>
 
   <ItemGroup>
