[Testes]: Unitários e integração

--- a/tests/CommonTestUtilities/CommonTestUtilities.csproj
+++ b/tests/CommonTestUtilities/CommonTestUtilities.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\src\ClashFlow.Domain\CashFlow.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
